Доделываю docker-конфиг (2)

--- a/.env.default
+++ b/.env.default
@@ -2,7 +2,7 @@ COMPOSE_PROJECT_NAME=php-container
 SITE_EDITOR_GID=830
 DOCKER_USER_UID_GID=1100
 DOCKER_WEB_USER=101
-PHP_VERSION=
+PHP_VERSION=8.3.8
 NODEJS_VERSION=v22.2.0
 NGINX_PORT=8080
 NGINX_VERSION=1.27.0
