--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get -y update && \
 ARG SITE_EDITOR_GID=830
 ARG DOCKER_USER_UID_GID=1100
 ARG DOCKER_WEB_USER=101
-ARG PHP_VERISON=
+ARG PHP_VERISON=8.3.8
 ARG NVM_VERSION=v0.39.7
 ARG NODEJS_VERSION=v22.2.0
 
