--- a/.env.default
+++ b/.env.default
@@ -1,8 +1,10 @@
-COMPOSE_PROJECT_NAME=php-container
+COMPOSE_PROJECT_NAME=phpdocker
 SITE_EDITOR_GID=830
 DOCKER_USER_UID_GID=1100
 DOCKER_WEB_USER=101
 PHP_VERSION=8.3.8
 NODEJS_VERSION=v22.3.0
-NGINX_PORT=8080
 NGINX_VERSION=1.27.0
+NGINX_HOST=0.0.0.0
+NGINX_PORT=8080
+PROJECT_ROOT=/home/docker_user/app
