--- a/php/8.3.8/conf.d/xdebug.ini
+++ b/php/8.3.8/conf.d/xdebug.ini
@@ -1,2 +1,12 @@
 zend_extension="/home/docker_user/.phpenv/versions/8.3.8/lib/php/extensions/no-debug-non-zts-20230831/xdebug.so"
 html_errors=on
+
+# https://habr.com/ru/articles/712670/
+[xdebug]
+xdebug.mode=debug
+xdebug.start_with_request=yes
+xdebug.max_nesting_level=1000
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9001
+xdebug.log=/var/log/php/xdebug.log
+xdebug.idekey=PHPSTORM
