--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -18,10 +18,12 @@ ARG DOCKER_WEB_USER=101
 ARG NGINX_PORT=8080
 ARG NGINX_HOST=0.0.0.0
 ARG PROJECT_ROOT
+ARG PUBLIC_ROOT
 
 ENV NGINX_PORT ${NGINX_PORT}
 ENV NGINX_HOST ${NGINX_HOST}
 ENV PROJECT_ROOT ${PROJECT_ROOT}
+ENV PUBLIC_ROOT ${PUBLIC_ROOT}
 
 RUN groupadd -g ${SITE_EDITOR_GID} site_editor && \
 	useradd -Um -u ${DOCKER_USER_UID_GID} -G site_editor docker_user && \
