--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -2,7 +2,7 @@ server {
     listen ${NGINX_PORT};
     listen [::]:${NGINX_PORT};
     server_name ${NGINX_HOST};
-    root ${PROJECT_ROOT};
+    root ${PUBLIC_ROOT};
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
